modify docker jvm size